# aa-srp

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automated-checks.yml  pre-commit.yml  pypi-package-build-test.yml  pypi-release.yml
.make/conf.d/: django-esi.mk  django.mk  tests.mk
aasrp/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  form.py  managers.py  models.py  providers.py  tasks.py  urls.py  utils.py  view_helper.py  views.py
aasrp/discord/: channel_message.py  direct_message.py
aasrp/handler/: esi_handler.py
aasrp/helper/: character.py  eve_images.py  icons.py  notification.py  numbers.py  srp_data.py  static_files.py  urls.py  user.py
aasrp/locale/: django.pot
aasrp/locale/cs/LC_MESSAGES/: django.mo  django.po
aasrp/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
aasrp/locale/de/LC_MESSAGES/: django.mo  django.po
aasrp/locale/en/LC_MESSAGES/: django.po
aasrp/locale/es/LC_MESSAGES/: django.mo  django.po
aasrp/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
aasrp/locale/it_IT/LC_MESSAGES/: django.mo  django.po
aasrp/locale/ja/LC_MESSAGES/: django.mo  django.po
aasrp/locale/ko/LC_MESSAGES/: django.po
aasrp/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
aasrp/locale/nl/LC_MESSAGES/: django.mo  django.po
aasrp/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
aasrp/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
aasrp/locale/ru/LC_MESSAGES/: django.mo  django.po
aasrp/locale/sk/LC_MESSAGES/: django.mo  django.po
aasrp/locale/uk/LC_MESSAGES/: django.mo  django.po
aasrp/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
aasrp/management/commands/: aasrp_load_eve.py  aasrp_migrate_srp_data.py  aasrp_migrate_to_comments.py  aasrp_update_db_relations.py
aasrp/migrations/: 0001_init.py  0001_initial.py  0002_auto_20201106_1258.py  0002_migrate_to_sde.py  0002_relations_update.py  0003_aasrprequest_reject_info.py  0003_alliance_auth_proxy_models.py  0003_auto_20201109_1654.py  0004_aasrplink_creator.py  0004_aasrpusersettings.py  0005_auto_20201109_1708.py  0005_insurance.py  0006_auto_20201109_1747.py  0006_related_names.py  0007_aasrprequestcomment_comment_time_and_more.py  0007_alter_aasrprequestcomment_comment_type.py  0007_auto_20201123_1017.py  0008_aasrprequestcomment_new_status_and_more.py  0008_auto_20201123_1322.py  0009_add_fleet_type_to_srp_link.py  0009_auto_20201222_1753.py  0010_change_model_names_and_verobose_names.py  0010_model_changes.py  0010_rename_models.py  0011_default_settings.py  0011_setting.py  0012_alter_fleettype_options_alter_insurance_options_and_more.py  0012_migrate_app_settings_from_local_py_to_database.py  0013_setting_loss_value_source.py  0014_alter_srprequest_ship.py
aasrp/providers/: applogger.py  esi.py
aasrp/static/aasrp/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  aa-srp-form.css  aa-srp-form.min.css  aa-srp-form.min.css.map  aa-srp.css  aa-srp.min.css  aa-srp.min.css.map
aasrp/static/aasrp/javascript/: aa-srp-dashboard.js  aa-srp-dashboard.min.js  aa-srp-dashboard.min.js.map  aa-srp-view-requests.js  aa-srp-view-requests.min.js  aa-srp-view-requests.min.js.map  aa-srp.js  aa-srp.min.js  aa-srp.min.js.map  form.js  form.min.js  form.min.js.map  my-srp-requests.js  my-srp-requests.min.js  my-srp-requests.min.js.map  srp-links.js  srp-links.min.js  srp-links.min.js.map  view-requests.js  view-requests.min.js  view-requests.min.js.map
aasrp/templates/aasrp/: base.html  dashboard.html  link-add.html  link-edit.html  link_add.html  link_edit.html  request-srp.html  request_srp.html  user-settings.html  view-own-requests.html  view-requests.html  view_requests.html
aasrp/templates/aasrp/ajax-render/: srp-request-additional-information.html
aasrp/templates/aasrp/ajax_render/: srp_request_additional_information.html
aasrp/templates/aasrp/bundles/: aa-bootstrap-fix-css.html  aa-srp-css.html  aa-srp-dashboard-js.html  aa-srp-form-css.html  aa-srp-form-js.html  aa-srp-js.html  aa-srp-view-requests-js.html  bootstrap3-editable-css.html  bootstrap3-editable-js.html  datatables-2-css.html  datatables-2-js.html  my-srp-requests-js.html  srp-links-js.html  view-requests-js.html  x-editable-css.html  x-editable-js.html
aasrp/templates/aasrp/modals/dashboard/: delete_srp_link.html  disable-srp-link.html  disable_srp_link.html  enable_srp_link.html
aasrp/templates/aasrp/modals/view-requests/: accept-rejected-request.html  accept-request.html  bulk-accept-requests.html  bulk-delete-requests.html  delete-request.html  mark-complete.html  reject-request.html  request-details.html
aasrp/templates/aasrp/modals/view_requests/: accept_rejected_request.html  accept_request.html  (+7 more)
aasrp/templatetags/: aasrp.py  aasrp_user.py  aasrp_versioned_static.py
aasrp/tests/: __init__.py  test_access.py  test_admin.py  test_app_settings.py  test_auth_hooks.py  test_discord_channel_message.py  test_discord_direct_message.py  test_forms.py  test_handler_esi.py  test_helper_character.py  test_helper_eve_images.py  test_helper_icons.py  test_helper_notification.py  test_helper_numbers.py  test_helper_srp_data.py  test_helper_urls.py  test_helper_user.py  test_installed_modules.py  test_manager.py  test_model_fleettype.py  test_model_setting.py  test_model_srplink.py  test_model_srprequest.py  test_models.py  test_providers.py  test_templatetags.py  test_user_agent.py  test_views_ajax.py  test_views_datatables.py  test_views_general.py  utils.py
aasrp/urls/: __init__.py  ajax.py  views.py
aasrp/views/: __init__.py  ajax.py  datatables.py  general.py
pastebin/: esi_insurance.json  esi_killmail.json  evekill_killmail.json  zkillboard_killmail.json
testauth/: celery.py  local.py  settings.py  settings_aa3x.py  urls.py
testauth/settings/: local.py
testauth/settings/testing/: local.py
(+81 files in other folders)
