[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-srp"
description = "Improved SRP Module for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "ship_replacement",
]
license = { file = "LICENSE" }
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.10,<5",
    "allianceauth-app-utils>=1.25",
    "django-esi>=8,<9",
    "django-eveuniverse>=1.5.4",
]
optional-dependencies.tests-allianceauth-latest = [
    "aa-discordnotify",
    "aa-forum",
    "allianceauth-discordbot",
    "coverage",
    "django-webtest",
    "faker",
    "py-cord>=2.7.0rc1",
    "requests-mock",
]
urls.Changelog = "https://github.com/ppfeufer/aa-srp/blob/master/CHANGELOG.md"
urls.Codecov = "https://codecov.io/gh/ppfeufer/aa-srp"
urls.Discord = "https://discord.gg/fjnHAmk"
urls.Documentation = "https://github.com/ppfeufer/aa-srp/blob/master/README.md"
urls.Donation = "https://ko-fi.com/ppfeufer"
urls.GitHub = "https://github.com/ppfeufer/aa-srp"
urls.Tracker = "https://github.com/ppfeufer/aa-srp/issues"
urls.Translation = "https://weblate.ppfeufer.de/projects/alliance-auth-apps/aa-srp/"

[tool.hatch.build]
include = [
    "/aasrp",
]

[tool.hatch.version]
path = "aasrp/__init__.py"
