[metadata]
name = aa_srp
version = attr: aasrp.__version__
description = Improved SRP Module for Alliance Auth
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Pfeufer
author_email = develop@ppfeufer.de
maintainer = Peter Pfeufer
maintainer_email = develop@ppfeufer.de
license = GPL-3.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/ppfeufer/aa-srp
keywords =
    allianceauth
    eveonline
    ship_replacement
project_urls =
    Issue / Bug Reports = https://github.com/ppfeufer/aa-srp/issues
    Changelog = https://github.com/ppfeufer/aa-srp/blob/master/CHANGELOG.md

[options]
packages = find_namespace:
install_requires =
    allianceauth>=2.15.1
    allianceauth-app-utils>=1.14.0
    django-eveuniverse>=0.16.3
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = aasrp*

[options.package_data]
* = *
